# Cpp_Image_Processing

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
image_processing/: CMakeLists.txt
image_processing/include/: image_processor.hpp
image_processing/src/: image_processor.cpp
